ix bug where site gets scrollbars due to universe background

--- a/Public/styles/app.css
+++ b/Public/styles/app.css
@@ -9,6 +9,7 @@ body, html {
 
 body {
 	font-family: 'Monofur', sans-serif !important;
+  overflow: hidden;
 }
 
 .thank-you {
